--- a/books.html
+++ b/books.html
@@ -83,6 +83,25 @@
             </div>
 
             <div class="books-grid">
+                <div class="member-list">
+                    <h2>List of books</h2>
+                    <div class="member-cards">
+                        <div class="member-card">
+                            <div class="profile-photo">
+                                <img src="images/profile-2.jpg" alt="Member Photo">
+                            </div>
+                            <div class="member-info">
+                                <h3>John Doe</h3>
+                                <p>Email: johndoe@example.com</p>
+                                <p>Phone: (555) 123-4567</p>
+                                <div class="actions">
+                                    <a href="edit-member.html?id=1" class="edit-btn">Edit</a>
+                                    <a href="delete-member.php?id=1" class="delete-btn">Delete</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
                 <!-- Book items will be dynamically added here -->
             </div>
         </main>
